k8s/redis-insight.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redisinsight
  labels:
    app: redisinsight
spec:
  serviceName: redisinsight
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      containers:
      - name:  redisinsight
        image: redislabs/redisinsight:1.9.0
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 0
        volumeMounts:
        - name: redisinsight-db
          mountPath: /db
        ports:
        - containerPort: 8001
          protocol: TCP
  volumeClaimTemplates:
  - metadata: 
      name: redisinsight-db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 1Gi
