k8s/shorty-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorty
  labels:
    app: shorty
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '2112'
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shorty
  template:
    metadata:
      labels:
        app: shorty
    spec:
      containers:
      - name: shorty
        image: nwehr/shorty-server:latest
        imagePullPolicy: Always
