k8s/shorty-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shorty
  name: shorty
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: shorty
  type: ClusterIP
