k8s/shorty-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lan
spec:
  rules:
  - host: short.url
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shorty
            port:
              number: 80
